@@ -1,3 +1,8 @@
+2007-09-12  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl:      Check the statusbar exists before using it.
+	* tkchat_rss.tcl:
+
 2007-09-10  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Use native scrollbars on Aqua and avoid ttk ones. 
